--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
 					 <div class="additional-text">
 						 <p>
 							 My other less notable ones are
-							 <a href="https://www.instagram.com/t3mpyt" target="_blank">Instagram</a>,
+							 <a href="https://github.com/t3mpban" target="_blank">Github</a>,
 							 <a href="https://steamcommunity.com/id/t3wp" target="_blank">Steam</a>,
 							 <a href="https://www.tiktok.com/t3mpban" target="_blank">TikTok</a>, and
-							 <a href="https://paypal.me/t3mpbusiness" target="_blank">PayPal</a>.
-							 I go by Temp, t3mp, t3mpban, t3mpyt, tempuchan, 3vu, t3vu, ??? (tenpu) or ??.
+							 <a href="https://www.instagram.com/t3mpyt" target="_blank">Instagram</a>.
+							 I go by Temp, t3mp, t3mpban, t3mpyt, tempuchan, 3vu, t3vu, テンプ (tenpu) or 템프.
 						 </p>
 					 </div>
 				 </div>
 
 				 <div id="div3" class="div-content">				
 					<div id="animation-container2">
-						<video id="vid" onclick="window.open('https://www.youtube.com/t3mpyt?sub_confirmation=1', '_blank');" src="images/bg.webm" autoplay muted loop></video>
+						<video id="vid" onclick="window.open('https://www.youtube.com/t3mpyt?sub_confirmation=1', '_blank');" src="images/portfolio.webm" autoplay muted loop></video>
 					</div>
 				 </div>
  
@@ -107,9 +107,7 @@
 
 				 <div id="div5" class="div-content">	
 					 <div id="pmet">
-						 <p class="grey">
-							Thanks for visiting my website! If you have any questions, feel free to add me on Discord at <a style="color: #caaaff;" href="discord://-/users/565992682800021504">@3vu</a>. You can also email me at <a style="color: #caaaff;" href="mailto:contact@t3mp.co.uk.com">contact@t3mp.co.uk</a> for other inquiries.
-						 </p>
+						 <p class="grey">Thanks for visiting my website! If you have any questions, feel free to add me on Discord at <a style="color: #caaaff;" href="discord://-/users/565992682800021504">@3vu</a>. You can also email me at <a style="color: #caaaff;" href="mailto:contact@t3mp.co.uk.com">contact@t3mp.co.uk</a> for other inquiries.</p>
 					 </div>
 				 </div>
 			 </div>
