--- a/info/index.html
+++ b/info/index.html
@@ -24,8 +24,8 @@
 		z-index: -1;
 		}
 		body {
-			background-color: #ffd7b4;
-			color: #1c1b1a;
+			background-color: #270D10;
+			color: #e1ca98;
 			text-shadow: -2px 2px rgba(28, 27, 26, 0.3);
 			background-size: cover;
 			background-attachment: fixed;
@@ -43,8 +43,16 @@
             max-height: calc(100vh - 100px);
         }
         h1 {
-            color: #be1cfd;
+            color: #972d35;
+			filter: drop-shadow(0 0 5px #000000);
         }
+		a {
+			color: #e1ca98;
+			text-decoration: none;
+		}
+		a:hover {
+			text-decoration: underline;
+		}
     </style>
 </head>
 <body>
