--- a/404.html
+++ b/404.html
@@ -2,17 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Temp's Website V2</title>
-	<link rel="icon" type="image/png" href="favicon.png">
+    <title>Temp's Website V4 - 404</title>
+	<link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" type="text/css" href="scripts/style.css">
 	<style>
 		body {		    
-			background-color: #050511;
+			background-color: #270D10;
+		}
+		p3 {
+			color: #e1ca98;
 		}
 	</style>
 </head>
 <body>
 	<p3 class="404">404 Error: This page does not exist</p3>
-	<div class="vignette"></div>
 </body>
 </html>
