--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 				 <div id="div3" class="div-content">				
 					<div id="animation-container2">
-						<video id="vid" onclick="window.open('https://www.youtube.com/t3mpyt?sub_confirmation=1', '_blank');" src="images/portfolio.webm" autoplay muted loop></video>
+						<video id="vid" onclick="window.open('https://t3mp.co.uk/portfolio', '_blank');" src="images/portfolio.webm" autoplay muted loop></video>
 					</div>
 				 </div>
  
@@ -130,7 +130,7 @@
 			 </button>
 		 </div>
 		 <div class="social-container">
-			 <button id="back" class="nav-button" onclick="window.open('https://t3mp.co.uk/v2', '_self');">     
+			 <button id="back" class="nav-button" onclick="window.open('https://t3mp.co.uk/v3', '_self');">     
 				 <img src="images/back.webp" height="40" width="40" alt="go back to v2...">
 			 </button>
 		 </div>
