--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 				 <div id="div3" class="div-content">				
 					<div id="animation-container2">
-						<video id="vid" onclick="window.open('https://t3mp.co.uk/portfolio', '_blank');" src="images/portfolio.webm" autoplay muted loop></video>
+						<video id="vid" onclick="window.location.href='https://t3mp.co.uk/portfolio/';" src="images/portfolio.webm" autoplay muted loop></video>
 					</div>
 				 </div>
  
